--- a/src/ToxiproxyNetCore.Tests/ToxiproxyNetCore.Tests.csproj
+++ b/src/ToxiproxyNetCore.Tests/ToxiproxyNetCore.Tests.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
+    <NoWarn>$(NoWarn);CA2007</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
